--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database
 db.driver: com.mysql.jdbc.Driver
-db.url: jdbc:mysql://localhost:3306/grosr?autoReconnect=true&useSSL=false
+db.url: jdbc:mysql://api.grosr.com:3306/grosr?autoReconnect=true&useSSL=false
 db.username: grosr
 db.password: 2c1t3012
 
