--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 db.driver: com.mysql.jdbc.Driver
 db.url: jdbc:mysql://localhost:3306/grosr?autoReconnect=true&useSSL=false
 db.username: grosr
-db.password: 2c1t3012
+db.password: 
 
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
